# LoggerLib

./: CMakeLists.txt  README.md  main.cpp
lib/: logger.cpp  logger.h
